tests/ui/validate_no_args.stderr
error: Illegal syntax for attribute validate
 --> $DIR/validate_no_args.rs:6:4
  |
6 |     #[validate]
  |       ^^^^^^^^
