tests/ui/validate_no_args.rs
use gotham_formdata::FormData;
use serde::Deserialize;

#[derive(Deserialize, FormData)]
struct MyFormData {
	#[validate]
	value: u8
}

fn main() {
}
